# esp32_tb-hotel

./: .gitignore  platformio.ini  sdkconfig.defaults
.github/workflows/: esp32_build.yml
components/flappy_bird/: CMakeLists.txt  flappy_bird.c
components/flappy_bird/include/: flappy_bird.h
components/flappy_bird/include/state/: intro_state.h
components/flappy_bird/state/: menu_state.c  running_state.c
components/led_matrix/: CMakeLists.txt  led_matrix.c
components/led_matrix/include/: led_matrix.h
components/ota/: CMakeLists.txt  idf_component.yml  ota.c
components/persistance/: CMakeLists.txt  idf_component.yml
components/persistance/include/: persistance.h
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/common/: CMakeLists.txt  wled.cpp
firmware/components/common/include/GC/: led_matrix.h  wled.h
firmware/components/flappy_bird/: CMakeLists.txt  flappy_bird.c
firmware/components/flappy_bird/include/: flappy_bird.h  state_machine.h
firmware/components/flappy_bird/include/state/: menu_state.h
firmware/components/flappy_bird/state/: intro_state.c
firmware/components/led_matrix/: led_matrix.c
firmware/components/led_matrix/include/: led_matrix.h
firmware/components/ota/include/: ota.h
firmware/components/ota_ble/: CMakeLists.txt  idf_component.yml  ota_ble.c
firmware/components/ota_ble/include/: ota_ble.h
firmware/components/persistance/: persistance.c
firmware/components/persistance/include/: persistance.h
firmware/docs/: state-machine.uml
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.cpp
hardware/: TB-Hotel.kicad_pcb  TB-Hotel.kicad_prl  TB-Hotel.kicad_pro  TB-Hotel.kicad_sch  fp-info-cache
main/: CMakeLists.txt  main.c
printed_parts/: TB-Hotel.FCStd
simulator/: CMakeLists.txt
simulator/main/: led_matrix.cc  main.cc
simulator/main/include/: led_matrix.h
src/: main.cpp
